--- a/app.json
+++ b/app.json
@@ -47,6 +47,13 @@
         }
       ],
       "expo-location",
+      [
+        "expo-maps",
+        {
+          "requestLocationPermission": true,
+          "locationPermission": "Allow $(PRODUCT_NAME) to use your location"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
