--- a/app.json
+++ b/app.json
@@ -1,59 +1,63 @@
 {
   "expo": {
     "name": "TitanRush",
+    "description": "An app to help titans get to class on time.",
     "slug": "TitanRush",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon_TR.png",
     "scheme": "titanrush",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.CSUF.titanrush"
+      "bundleIdentifier": "com.CSUF.titanrush",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs your location to calculate routes."
+      },
+      "config": {
+        "googleMapsApiKey": "process.env.GOOGLE_MAPS_API_KEY"
+      }
     },
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
       "config": {
         "googleMaps": {
           "apiKey": "process.env.GOOGLE_MAPS_API_KEY"
         }
       },
       "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
       "predictiveBackGestureEnabled": false,
       "package": "com.CSUF.titanrush"
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icon_TR.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/TitanRush_logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#00244e",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#00244e"
           }
         }
       ],
-      "expo-location",
       [
-        "expo-maps",
+        "expo-location",
         {
-          "requestLocationPermission": true,
-          "locationPermission": "Allow $(PRODUCT_NAME) to use your location"
+          "locationAlwaysAndWhenInUsePermission": "Allow ${PRODUCT_NAME} to use your location."
         }
-      ]
+      ],
+      "expo-maps",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
